[package]
name = "docker-credential-acr-login"
version = "0.1.0"
edition = "2021"
authors = ["Max Dymond <cmeister2@gmail.com>"]
description = "A docker credential helper for Azure Container Registries (ACRs)"
readme = "README.md"
repository = "https://github.com/cmeister2/docker-credential-acr-login"
license = "MIT"
keywords = ["docker", "credentials", "azure"]
categories = ["authentication", "development-tools", "virtualization"]

[dependencies]
anyhow = "1.0.75"
azure_core = "0.17.0"
azure_identity = "0.17.0"
clap = { version = "4.4.8", features = ["derive", "cargo", "env"] }
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
stderrlog = "0.5.4"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
url = "2.4.1"
